--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div>
         
       <h4>Current</h4>
-        <h3 id="cur-weight">84</h3>
+        <h3 id="cur-weight"></h3>
         <input style="width: 60px;" id="cust-weight" type="number" />
         <button onclick="submitWeight()">submit</button>
       </div>
